# conan

./: Cargo.toml  LICENSE  Makefile  README.md  run_container.sh
.github/workflows/: release-version.yaml
crypto/: Cargo.toml
crypto/src/: aead.rs  identity.rs  lib.rs  ratchet.rs
database/src/: lib.rs
example/: user1.toml  user2.toml
protocol/: Cargo.toml
protocol/src/: constants.rs  lib.rs  msg.rs  operations.rs
protocol/src/comm/: enums.rs  mod.rs  notification.rs
protocol/src/config/: mod.rs
protocol/src/crypto/: aead.rs  identity.rs  mod.rs  ratchet.rs
protocol/src/database/: mod.rs
protocol/src/entities/: manager.rs  slave.rs
protocol/src/entities/database/: chat.rs  peer.rs
protocol/src/entities/server/: manager.rs  master.rs  slave.rs
protocol/src/extras/: mod.rs
protocol/src/mls/: mod.rs
protocol/src/server_entities/: manager.rs  slave.rs
protocol/src/tests/: aead.rs  identity.rs  mod.rs  ratchet.rs
server/: Cargo.toml
server/src/: main.rs
tui/: Cargo.toml
tui/src/: lib.rs  main.rs  matches.rs
tui/src/components/: main_component.rs  mod.rs  new_peer.rs
tui/src/functions/: keys.rs  mod.rs  terminal_control.rs
xtask/: Cargo.toml
xtask/src/: main.rs
