[package]
name = "conan-crypto"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
rand.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json.workspace = true
bs58 = "0.5"
hex = "0.4"
